--- a/about-us.html
+++ b/about-us.html
@@ -31,17 +31,17 @@
     <div class="member">
       <!--<img class="pro-pic" src="assets/members/harper.png"></img>-->
       <h3 class="name">Harper Moreira</h3>
-      <p class="description">Game Designer, Programmer and Musician since 2008. Harper worked on several games and has knowledge in all areas of game development. She enjoys</p>
+      <p class="description">pharetra diam sit amet nisl suscipit adipiscing bibendum est ultricies integer quis auctor elit sed vulputate mi sit amet mauris commodo quis imperdiet massa tincidunt nunc pulvinar</p>
     </div>
     <div class="member">
       <!--<img class="pro-pic" src="assets/members/harper.png"></img>-->
       <h3 class="name">Juliana Almeida</h3>
-      <p class="description">Juliana is a living legend from the brazillian indie games scenario. She is an experienced producer, scriptwriter and marketer, having worked on large projects such as Enigma of Fear, Songs for a Hero 2 and Asleep.</p>
+      <p class="description">pharetra diam sit amet nisl suscipit adipiscing bibendum est ultricies integer quis auctor elit sed vulputate mi sit amet mauris commodo quis imperdiet massa tincidunt nunc pulvinar</p>
     </div>
     <div class="member">
       <!--<img class="pro-pic" src="assets/members/harper.png"></img>-->
       <h3 class="name">VanessoWisk</h3>
-      <p class="description">Experienced 2D animator since 2015. She worked on several studios like Split Studio, Voice Makers, Insight Studio, Doguinho Studios and Lendário Filmes.</p>
+      <p class="description">pharetra diam sit amet nisl suscipit adipiscing bibendum est ultricies integer quis auctor elit sed vulputate mi sit amet mauris commodo quis imperdiet massa tincidunt nunc pulvinar</p>
     </div>
   </div>
 
@@ -49,12 +49,12 @@
     <div class="member">
       <!--<img class="pro-pic" src="assets/members/tokio.png"></img>-->
       <h3 class="name">Druid</h3>
-      <p class="description">Game Designer and QA Analyst, certificated in Game Programming.</p>
+      <p class="description">pharetra diam sit amet nisl suscipit adipiscing bibendum est ultricies integer quis auctor elit sed vulputate mi sit amet mauris commodo quis imperdiet massa tincidunt nunc pulvinar</p>
     </div>
     <div class="member">
       <!--<img class="pro-pic" src="assets/members/kevin.jpg"></img>-->
       <h3 class="name">Isis Santiago</h3>
-      <p class="description">Isis is an illustrator.</p>
+      <p class="description">pharetra diam sit amet nisl suscipit adipiscing bibendum est ultricies integer quis auctor elit sed vulputate mi sit amet mauris commodo quis imperdiet massa tincidunt nunc pulvinar</p>
     </div>
   </div>
   <footer>
