added intrustion game

--- a/games.html
+++ b/games.html
@@ -22,25 +22,29 @@
 
   <script src="scripts.js"></script>
 
-  <div class="games-box">
-    <a href="https://astrocat-studio.itch.io/devils-corp" target="_blank">
-      <img src="assets/game-banners/dc-banner.png" class="game-item"></img>
-    </a>
-    <a href="https://harperbolic.itch.io/lens" target="_blank">
-      <img src="assets/game-banners/lens-banner.png" class="game-item"></img>
+  <div class="games-banner">
+    <a href="https://harperbolic.itch.io/intrusion" target="_blank">
+      <img src="assets/game-banners/intrusion-banner.png" class="game-banner"></img>
     </a>
   </div>
   
   <div class="game-out">
     <div class="game-in">
-      <iframe class="itch-game" frameborder="0" src="https://itch.io/embed/2430750?border_width=0&amp;bg_color=2b0000&amp;fg_color=ffffff&amp;link_color=cb0101&amp;border_color=ffffff" width="550" height="165"><a href="https://harperbolic.itch.io/griff">gRIFF by harperbolic</a></iframe>
-      <iframe class="itch-game" frameborder="0" src="https://itch.io/embed/2483156?border_width=0&amp;bg_color=2b0000&amp;fg_color=ffffff&amp;link_color=cb0101&amp;border_color=ffffff" width="550" height="165"><a href="https://alexhsantos.itch.io/sneakys-dungeeon">Sneaky's Dungeon</a></iframe>
+      <iframe class="itch-game" frameborder="0" src="https://itch.io/embed/2042424?bg_color=252525&amp;fg_color=dff8fd&amp;link_color=ff0909&amp;border_color=252525" width="550" height="165"><a href="https://astrocat-studio.itch.io/devils-corp">Devil's Corp</a></iframe>
+      <iframe class="itch-game" frameborder="0" src="https://itch.io/embed/2719483?bg_color=252525&amp;fg_color=dff8fd&amp;link_color=ff0909&amp;border_color=252525" width="550" height="165"><a href="https://harperbolic.itch.io/lens">Lens</a></iframe>
+    </div>
+  </div>
+
+  <div class="game-out">
+    <div class="game-in">
+      <iframe class="itch-game" frameborder="0" src="https://itch.io/embed/2430750?bg_color=252525&amp;fg_color=dff8fd&amp;link_color=ff0909&amp;border_color=252525" width="550" height="165"><a href="https://harperbolic.itch.io/griff">gRIFF</a></iframe>
+      <iframe class="itch-game" frameborder="0" src="https://itch.io/embed/2483156?bg_color=252525&amp;fg_color=dff8fd&amp;link_color=ff0909&amp;border_color=252525" width="550" height="165"><a href="https://alexhsantos.itch.io/sneakys-dungeeon">Sneaky's Dungeon</a></iframe>
     </div>
   </div>
 
     <footer>
     <div id="footer-content">
-      <h3 class="footer-text">Contact</h3>
+      <h3 class="footer-text" >Contact</h3>
       <p class="email-text">harper.moreira@gmail.com</p>
       <p class="copyright">&copy; Copyright 2024, Furigam Software</p>
     </div>
