--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
     </nav>
   </header>
 
+  <div class="games-banner">
+    <a href="https://harperbolic.itch.io/intrusion" target="_blank">
+      <img src="assets/game-banners/intrusion-banner.png" class="game-banner"></img>
+    </a>
+  </div>
+
   <div class="games-box">
     <a href="https://astrocat-studio.itch.io/devils-corp" target="_blank">
       <img src="assets/game-banners/dc-banner.png" class="game-item"></img>
