--- a/about-us.html
+++ b/about-us.html
@@ -33,13 +33,13 @@
       <h3 class="name">Harper Moreira</h3>
       <p class="description">pharetra diam sit amet nisl suscipit adipiscing bibendum est ultricies integer quis auctor elit sed vulputate mi sit amet mauris commodo quis imperdiet massa tincidunt nunc pulvinar</p>
     </div>
-    <div class="member">
-      <!--<img class="pro-pic" src="assets/members/harper.png"></img>-->
+    <!--<div class="member">
+      <!--<img class="pro-pic" src="assets/members/harper.png"></img>
       <h3 class="name">Juliana Almeida</h3>
       <p class="description">pharetra diam sit amet nisl suscipit adipiscing bibendum est ultricies integer quis auctor elit sed vulputate mi sit amet mauris commodo quis imperdiet massa tincidunt nunc pulvinar</p>
     </div>
     <div class="member">
-      <!--<img class="pro-pic" src="assets/members/harper.png"></img>-->
+      <!--<img class="pro-pic" src="assets/members/harper.png"></img>
       <h3 class="name">VanessoWisk</h3>
       <p class="description">pharetra diam sit amet nisl suscipit adipiscing bibendum est ultricies integer quis auctor elit sed vulputate mi sit amet mauris commodo quis imperdiet massa tincidunt nunc pulvinar</p>
     </div>
@@ -47,15 +47,15 @@
 
   <div class="team">
     <div class="member">
-      <!--<img class="pro-pic" src="assets/members/tokio.png"></img>-->
+      <!--<img class="pro-pic" src="assets/members/tokio.png"></img>
       <h3 class="name">Druid</h3>
       <p class="description">pharetra diam sit amet nisl suscipit adipiscing bibendum est ultricies integer quis auctor elit sed vulputate mi sit amet mauris commodo quis imperdiet massa tincidunt nunc pulvinar</p>
     </div>
     <div class="member">
-      <!--<img class="pro-pic" src="assets/members/kevin.jpg"></img>-->
+      <!--<img class="pro-pic" src="assets/members/kevin.jpg"></img>
       <h3 class="name">Isis Santiago</h3>
       <p class="description">pharetra diam sit amet nisl suscipit adipiscing bibendum est ultricies integer quis auctor elit sed vulputate mi sit amet mauris commodo quis imperdiet massa tincidunt nunc pulvinar</p>
-    </div>
+    </div>-->
   </div>
   <footer>
     <div id="footer-content">
