--- a/games.html
+++ b/games.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Furigam</title>
+  <title>Games</title>
+  <link rel="icon" type="image/png" href="assets/favi.png">
   <link rel="stylesheet" href="styles.css">
 </head>
 
