--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Furigam</title>
+  <link rel="icon" type="image/png" href="assets/favi.png">
   <link rel="stylesheet" href="styles.css">
 </head>
 
