update partners and about

--- a/about-us.html
+++ b/about-us.html
@@ -27,7 +27,7 @@
   </div>
 
 
-  <h1 class="team-title">Meet our team</h1>  
+  <h1 class="team-title">Our partners</h1>  
   <div class="team">
     <div class="member">
       <!--<img class="pro-pic" src="assets/members/harper.png"></img>-->
