--- a/about-us.html
+++ b/about-us.html
@@ -22,7 +22,7 @@
   </header>
 
   <div class="about">
-    <p class="text-about">We are <b>Furigam</b>, an indie game studio made up of friends who met at game jams. Our goal is to bring games to life using our passion.You can check out our work here and on each member's social networks!</p>
+    <p class="text-about"><b>Furigam</b> is a game studio focused on turning ideas into great experiences. We offer specialized services in music, programming, and game direction. <b>Join us in exploring a world of fun and creativity!</b></p>
     <img class="logo-about" src="assets/logo-black.png"></img>
   </div>
 
@@ -30,17 +30,20 @@
   <h1 class="team-title">Our partners</h1>  
   <div class="team">
     <div class="member">
-      <!--<img class="pro-pic" src="assets/members/harper.png"></img>-->
-      <h3 class="name">Harper Moreira</h3>
-      <p class="description">pharetra diam sit amet nisl suscipit adipiscing bibendum est ultricies integer quis auctor elit sed vulputate mi sit amet mauris commodo quis imperdiet massa tincidunt nunc pulvinar</p>
+      <h2 class="name">On-Frame</h2>
+      <p class="description">An animation and graphic art studio, composed of industry experienced animators who worked on projects like Rick and Morty and Teamfight Tactics.</p>
     </div>
-    <!--<div class="member">
-      <!--<img class="pro-pic" src="assets/members/harper.png"></img>
+    <div class="member">
+      <h2 class="name">Quimera</h2>
+      <p class="description">A marketing, script and production studio, composed of an indusrty experienced team who collaborated on projects like Asleep and Songs for a Hero 2.</p>
+    </div>
+  <!--<div class="member">
+      img class="pro-pic" src="assets/members/harper.png"></img>
       <h3 class="name">Juliana Almeida</h3>
       <p class="description">pharetra diam sit amet nisl suscipit adipiscing bibendum est ultricies integer quis auctor elit sed vulputate mi sit amet mauris commodo quis imperdiet massa tincidunt nunc pulvinar</p>
     </div>
     <div class="member">
-      <!--<img class="pro-pic" src="assets/members/harper.png"></img>
+      <img class="pro-pic" src="assets/members/harper.png"></img>
       <h3 class="name">VanessoWisk</h3>
       <p class="description">pharetra diam sit amet nisl suscipit adipiscing bibendum est ultricies integer quis auctor elit sed vulputate mi sit amet mauris commodo quis imperdiet massa tincidunt nunc pulvinar</p>
     </div>
@@ -48,12 +51,12 @@
 
   <div class="team">
     <div class="member">
-      <!--<img class="pro-pic" src="assets/members/tokio.png"></img>
+      <img class="pro-pic" src="assets/members/tokio.png"></img>
       <h3 class="name">Druid</h3>
       <p class="description">pharetra diam sit amet nisl suscipit adipiscing bibendum est ultricies integer quis auctor elit sed vulputate mi sit amet mauris commodo quis imperdiet massa tincidunt nunc pulvinar</p>
     </div>
     <div class="member">
-      <!--<img class="pro-pic" src="assets/members/kevin.jpg"></img>
+      <img class="pro-pic" src="assets/members/kevin.jpg"></img>
       <h3 class="name">Isis Santiago</h3>
       <p class="description">pharetra diam sit amet nisl suscipit adipiscing bibendum est ultricies integer quis auctor elit sed vulputate mi sit amet mauris commodo quis imperdiet massa tincidunt nunc pulvinar</p>
     </div>-->
@@ -62,7 +65,7 @@
     <div id="footer-content">
       <h3 class="footer-text">Contact</h3>
       <p class="email-text">harper.moreira@gmail.com</p>
-      <p class="copyright">&copy; Copyright 2024, Furigam Software</p>
+      <p class="copyright">&copy; Copyright 2024, Furigam</p>
     </div>
   </footer>
   
