--- a/games.html
+++ b/games.html
@@ -47,7 +47,7 @@
     <div id="footer-content">
       <h3 class="footer-text" >Contact</h3>
       <p class="email-text">harper.moreira@gmail.com</p>
-      <p class="copyright">&copy; Copyright 2024, Furigam Software</p>
+      <p class="copyright">&copy; Copyright 2024, Furigam</p>
     </div>
   </footer>
   
