--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
 </div>
 
   <div id="center">
-    <p class="text-index">We are <b>Furigam</b>, an indie game studio made up of friends who met at game jams. Our goal is to bring games to life using our passion. You can check out our work here and on each member's social networks!</p>
+    <p class="text-index"><b>Furigam</b> is a game studio focused on turning ideas into great experiences. We offer specialized services in music, programming, and game direction. <b>Join us in exploring a world of fun and creativity!</b></p>
   </div>
   
     <footer>
     <div id="footer-content">
       <h3 class="footer-text">Contact</h3>
       <p class="email-text">harper.moreira@gmail.com</p>
-      <p class="copyright">&copy; Copyright 2024, Furigam Software</p>
+      <p class="copyright">&copy; Copyright 2024, Furigam</p>
     </div>
   </footer>
 </body>
