--- a/about-us.html
+++ b/about-us.html
@@ -35,7 +35,7 @@
     </div>
     <div class="member">
       <h2 class="name">Quimera</h2>
-      <p class="description">A marketing, script and production studio, composed of an indusrty experienced team who collaborated on projects like Asleep and Songs for a Hero 2.</p>
+      <p class="description">Marketing, script and production studio, with an industry experienced team who collaborated on projects like Asleep and Songs for a Hero 2.</p>
     </div>
   <!--<div class="member">
       img class="pro-pic" src="assets/members/harper.png"></img>
