--- a/about-us.html
+++ b/about-us.html
@@ -31,7 +31,7 @@
   <div class="team">
     <div class="member">
       <h2 class="name">On-Frame</h2>
-      <p class="description">An animation and graphic art studio, composed of industry experienced animators who worked on projects like Rick and Morty and Teamfight Tactics.</p>
+      <p class="description">An animation and graphic art studio, composed of industry experienced animators who worked on projects like Joel's Brother, Wake Up, Carlo! and Teamfight Tactics.</p>
     </div>
     <div class="member">
       <h2 class="name">Quimera</h2>
