--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <title>Furigam</title>
   <link rel="icon" type="image/png" href="assets/favi.png">
   <link rel="stylesheet" href="styles.css">
