--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
   <header>
+    <a rel="me" href="https://mastodon.gamedev.place/@harper"></a>
     <nav>
       <a class="logo" href="index.html"><img class="logo" src="assets/logo.png"></img></a>
 	<ul class="nav-list">
