--- a/about-us.html
+++ b/about-us.html
@@ -31,11 +31,11 @@
   <div class="team">
     <div class="member">
       <h2 class="name">On-Frame</h2>
-      <p class="description">An animation and graphic art studio, composed of industry experienced animators who worked on projects like Joel's Brother, Wake Up, Carlo! and Teamfight Tactics.</p>
+      <p class="description">An animation and graphic art studio, composed of industry experienced animators who worked on projects like Jorel's Brother, Wake Up, Carlo! and Teamfight Tactics.</p>
     </div>
     <div class="member">
       <h2 class="name">Quimera</h2>
-      <p class="description">Marketing, script and production studio, with an industry experienced team who collaborated on projects like Asleep and Songs for a Hero 2.</p>
+      <p class="description">Marketing, script and production studio, with an industry experienced team who worked on projects like Enigma of Fear, Asleep and Songs for a Hero 2.</p>
     </div>
   <!--<div class="member">
       img class="pro-pic" src="assets/members/harper.png"></img>
