update contact email

--- a/games.html
+++ b/games.html
@@ -46,7 +46,7 @@
     <footer>
     <div id="footer-content">
       <h3 class="footer-text" >Contact</h3>
-      <p class="email-text">harper.moreira@gmail.com</p>
+      <p class="email-text">contact@furigam.com</p>
       <p class="copyright">&copy; Copyright 2024, Furigam</p>
     </div>
   </footer>
