--- a/about-us.html
+++ b/about-us.html
@@ -22,7 +22,7 @@
   </header>
 
   <div class="about">
-    <p class="text-about"><b>Furigam</b> is a game studio focused on turning ideas into great experiences. We offer specialized services in music, programming, and game direction. <b>Join us in exploring a world of fun and creativity!</b></p>
+    <p class="text-about"><b>Furigam</b> is a game studio focused on turning ideas into great experiences. We offer specialized services in music, programming, implementation and engine. <b>Join us in exploring a world of fun and creativity!</b></p>
     <img class="logo-about" src="assets/logo-black.png"></img>
   </div>
 
@@ -65,7 +65,7 @@
     <div id="footer-content">
       <h3 class="footer-text">Contact</h3>
       <p class="email-text">contact@furigam.com</p>
-      <p class="copyright">&copy; Copyright 2024, Furigam</p>
+      <p class="copyright">&copy; Copyright 2025, Furigam</p>
     </div>
   </footer>
   
