--- a/games.html
+++ b/games.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <nav>
-      <a class="logo" href="index.html"><img class="logo" src="assets/logo.png"></img></a>
+      <a class="logo" href="index.html"><img class="logo" src="assets/logo.svg"></img></a>
 	<ul class="nav-list">
 	  <li><a href="index.html">Home</a></li>
 	  <li><a href="games.html">Games</a></li>
