--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header>
     <a rel="me" href="https://mastodon.gamedev.place/@harper"></a>
     <nav>
-      <a class="logo" href="index.html"><img class="logo" src="assets/logo.png"></img></a>
+      <a class="logo" href="index.html"><img class="logo" src="assets/logo.svg"></img></a>
 	<ul class="nav-list">
 	  <li><a href="index.html">Home</a></li>
 	  <li><a href="games.html">Games</a></li>
