--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
 <body>
   <header>
-    <a rel="me" href="https://mastodon.gamedev.place/@harper"></a>
     <nav>
       <a class="logo" href="index.html"><img class="logo" src="assets/logo.svg"></img></a>
 	<ul class="nav-list">
 	  <li><a href="index.html">Home</a></li>
 	  <li><a href="games.html">Games</a></li>
+    <li><a href="presskit/index.html">Presskit</a></li>
 	  <li><a href="about-us.html">About Us</a></li>
 	</ul>
     </nav>
