--- a/about-us.html
+++ b/about-us.html
@@ -16,6 +16,7 @@
 	<ul class="nav-list">
 	  <li><a href="index.html">Home</a></li>
 	  <li><a href="games.html">Games</a></li>
+    <li><a href="presskit">Presskit</a></li>
 	  <li><a href="about-us.html">About Us</a></li>
 	</ul>
     </nav>
