--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<ul class="nav-list">
 	  <li><a href="index.html">Home</a></li>
 	  <li><a href="games.html">Games</a></li>
-    <li><a href="presskit/index.html">Presskit</a></li>
+    <li><a href="presskit">Presskit</a></li>
 	  <li><a href="about-us.html">About Us</a></li>
 	</ul>
     </nav>
