--- a/index.html
+++ b/index.html
@@ -1,59 +1,70 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <title>Furigam</title>
-  <link rel="icon" type="image/png" href="assets/favi.png">
-  <link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-  <header>
-    <nav>
-      <a class="logo" href="index.html"><img class="logo" src="assets/logo.svg"></img></a>
-	<ul class="nav-list">
-	  <li><a href="index.html">Home</a></li>
-	  <li><a href="games.html">Games</a></li>
-    <li><a href="presskit">Presskit</a></li>
-	  <li><a href="about-us.html">About Us</a></li>
-	</ul>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Furigam</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container">
+        <a class="navbar-brand" href="#"><img src="assets/logo.svg" height="30"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Jogos
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="https://harperbolic.itch.io/intrusion" target="_blank">Intrusion</a></li>
+                <li><a class="dropdown-item" href="https://astrocat-studio.itch.io/devils-corp" target="_blank">Devil's Corp</a></li>
+                <li><a class="dropdown-item" href="https://alexhsantos.itch.io/sneakys-dungeeon" target="_blank">Sneaky's Dungeon</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="https://harperbolic.itch.io" target="_blank">Todos os jogos</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/presskit">Presskit</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled"></a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
-  </header>
 
-  <div class="games-banner">
-    <a href="https://harperbolic.itch.io/intrusion" target="_blank">
-      <img src="assets/game-banners/intrusion-banner.png" class="game-banner"></img>
-    </a>
-  </div>
-
-  <div class="games-box">
-    <a href="https://astrocat-studio.itch.io/devils-corp" target="_blank">
-      <img src="assets/game-banners/dc-banner.png" class="game-item"></img>
-    </a>
-    <a href="https://harperbolic.itch.io/lens" target="_blank">
-      <img src="assets/game-banners/lens-banner.png" class="game-item"></img>
-    </a>
-  </div>
-<div class="video-container">
-  <video autoplay muted loop>
-    <source src="assets/movie.webm" type="video/webm" />
-  </video>
-</div>
-
-  <div id="center">
-    <p class="text-index"><b>Furigam</b> is a game studio focused on turning ideas into great experiences. We offer specialized services in music, programming, and game direction. <b>Join us in exploring a world of fun and creativity!</b></p>
-  </div>
-  
-    <footer>
-    <div id="footer-content">
-      <h3 class="footer-text">Contact</h3>
-      <p class="email-text">contact@furigam.com</p>
-      <p class="copyright">&copy; Copyright 2025, Furigam</p>
+    <div id="carouselExample" class="carousel slide">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="assets/game-banners/intrusion-banner.png" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="assets/game-banners/lens-banner.png" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="assets/game-banners/dc-banner.png" class="d-block w-100" alt="...">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
-  </footer>
-</body>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="main.js"></script>
+  </body>
 </html>
