--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
                 <li><a class="dropdown-item" href="https://harperbolic.itch.io/intrusion" target="_blank">Intrusion</a></li>
                 <li><a class="dropdown-item" href="https://astrocat-studio.itch.io/devils-corp" target="_blank">Devil's Corp</a></li>
                 <li><a class="dropdown-item" href="https://alexhsantos.itch.io/sneakys-dungeeon" target="_blank">Sneaky's Dungeon</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="https://harperbolic.itch.io" target="_blank">Todos os jogos</a></li>
+                <li><a class="dropdown-item" href="https://harperbolic.itch.io/griff" target="_blank">gRIFF</a></li>
+                <li><a class="dropdown-item" href="https://inukhan.itch.io/limbpunk" target="_blank">LimbPunk</a></li>
+                <li><a class="dropdown-item" href="https://harperbolic.itch.io/lens" target="_blank">Lens</a></li>
               </ul>
             </li>
             <li class="nav-item">
