finalizar nova versão do site

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Furigam</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -64,6 +65,83 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
+
+    <div class="container jogos">
+      <h1>Nossos jogos</h1>
+      <div class="row">
+        <div class="card" style="width: 18rem;">
+          <img src="assets/thumbs/intrusion.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Intrusion</h5>
+            <p class="card-text">Visual novel retrofuturista ambientada em São Paulo. Múltiplos finais e personagens animados.</p>
+            <a href="#" class="btn btn-danger">Jogue agora!</a>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <img src="assets/thumbs/len.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Lens</h5>
+            <p class="card-text">Desperte em um mundo caído, explore e descubra os mistérios de um passado distante.</p>
+            <a href="#" class="btn btn-danger">Jogue agora!</a>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <img src="assets/thumbs/sd.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Sneaky's Dungeon</h5>
+            <p class="card-text">Um jogo de plataforna que homenageia clássicos da From Software. Jogue apenas com o mouse!</p>
+            <a href="#" class="btn btn-danger">Jogue agora!</a>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <img src="assets/thumbs/gri.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">gRIFF</h5>
+            <p class="card-text">Supere seus demônios interiores nesse jogo shmup (de navinha) inspirado em Guitar Hero!.</p>
+            <a href="#" class="btn btn-danger">Jogue agora!</a>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <img src="assets/thumbs/dc.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Devil's Corp</h5>
+            <p class="card-text">Ajude Alister, um shinigami entregador de almas, e executar uma entrega a um destinatário sinistro.</p>
+            <a href="#" class="btn btn-danger">Jogue agora!</a>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <img src="assets/thumbs/limb.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">LimbPunk</h5>
+            <p class="card-text">Um jogo de plataforma aonde sua própria carne é, simultaneamente, recurso e habilidade.</p>
+            <a href="#" class="btn btn-danger">Jogue agora!</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <footer class="footer">
+      <div class="container">
+          <div class="row align-items-center">
+              <div class="col-md-6">
+                  <div class="footer-brand"><img src="assets/logo.svg"height="20"></div>
+                  <p class="footer-text">Desenvolvendo experiências e jogos únicos, feitos com paixão e dedicação para todos ao redor do mundo.</p>
+              </div>
+  
+              <div class="col-md-6 text-md-end">
+                  <ul class="footer-links">
+                      <li><a href="#">Sobre</a></li>
+                      <li><a href="#">Serviços</a></li>
+                      <li><a href="mailto:contact@furigam.com">Contato</a></li>
+                  </ul>
+              </div>
+          </div>
+  
+          <div class="copyright text-center">
+              © 2024 Furigam.
+          </div>
+      </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="main.js"></script>
