--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <div class="card-body">
             <h5 class="card-title">Intrusion</h5>
             <p class="card-text">Visual novel retrofuturista ambientada em São Paulo. Múltiplos finais e personagens animados.</p>
-            <a href="#" class="btn btn-danger">Jogue agora!</a>
+            <a href="https://harperbolic.itch.io/intrusion" target="_blank" class="btn btn-danger">Jogue agora!</a>
           </div>
         </div>
         <div class="card" style="width: 18rem;">
@@ -82,7 +82,7 @@
           <div class="card-body">
             <h5 class="card-title">Lens</h5>
             <p class="card-text">Desperte em um mundo caído, explore e descubra os mistérios de um passado distante.</p>
-            <a href="#" class="btn btn-danger">Jogue agora!</a>
+            <a href="https://harperbolic.itch.io/lens" target="_blank" class="btn btn-danger">Jogue agora!</a>
           </div>
         </div>
         <div class="card" style="width: 18rem;">
@@ -90,7 +90,7 @@
           <div class="card-body">
             <h5 class="card-title">Sneaky's Dungeon</h5>
             <p class="card-text">Um jogo de plataforna que homenageia clássicos da From Software. Jogue apenas com o mouse!</p>
-            <a href="#" class="btn btn-danger">Jogue agora!</a>
+            <a href="https://alexhsantos.itch.io/sneakys-dungeeon" target="_blank" class="btn btn-danger">Jogue agora!</a>
           </div>
         </div>
         <div class="card" style="width: 18rem;">
@@ -98,7 +98,7 @@
           <div class="card-body">
             <h5 class="card-title">gRIFF</h5>
             <p class="card-text">Supere seus demônios interiores nesse jogo shmup (de navinha) inspirado em Guitar Hero!.</p>
-            <a href="#" class="btn btn-danger">Jogue agora!</a>
+            <a href="https://harperbolic.itch.io/griff" target="_blank" class="btn btn-danger">Jogue agora!</a>
           </div>
         </div>
         <div class="card" style="width: 18rem;">
@@ -106,7 +106,7 @@
           <div class="card-body">
             <h5 class="card-title">Devil's Corp</h5>
             <p class="card-text">Ajude Alister, um shinigami entregador de almas, e executar uma entrega a um destinatário sinistro.</p>
-            <a href="#" class="btn btn-danger">Jogue agora!</a>
+            <a href="https://astrocat-studio.itch.io/devils-corp" target="_blank" class="btn btn-danger">Jogue agora!</a>
           </div>
         </div>
         <div class="card" style="width: 18rem;">
@@ -114,7 +114,7 @@
           <div class="card-body">
             <h5 class="card-title">LimbPunk</h5>
             <p class="card-text">Um jogo de plataforma aonde sua própria carne é, simultaneamente, recurso e habilidade.</p>
-            <a href="#" class="btn btn-danger">Jogue agora!</a>
+            <a href="https://inukhan.itch.io/limbpunk" target="_blank" class="btn btn-danger">Jogue agora!</a>
           </div>
         </div>
       </div>
@@ -130,6 +130,7 @@
   
               <div class="col-md-6 text-md-end">
                   <ul class="footer-links">
+                      <li><a href="/presskit">Presskit</a></li>
                       <li><a href="#">Sobre</a></li>
                       <li><a href="#">Serviços</a></li>
                       <li><a href="mailto:contact@furigam.com">Contato</a></li>
