minor text changes

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <img src="assets/thumbs/sd.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Sneaky's Dungeon</h5>
-            <p class="card-text">Um jogo de plataforna que homenageia clássicos da From Software. Jogue apenas com o mouse!</p>
+            <p class="card-text">Um jogo de plataforna que homenageia clássicos da From Software. Jogue apenas usando o mouse!</p>
             <a href="https://alexhsantos.itch.io/sneakys-dungeeon" target="_blank" class="btn btn-danger">Jogue agora!</a>
           </div>
         </div>
@@ -105,7 +105,7 @@
           <img src="assets/thumbs/dc.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Devil's Corp</h5>
-            <p class="card-text">Ajude Alister, um shinigami entregador de almas, e executar uma entrega a um destinatário sinistro.</p>
+            <p class="card-text">Ajude Alister, um shinigami entregador de almas, a realizar uma entrega a um destinatário sinistro.</p>
             <a href="https://astrocat-studio.itch.io/devils-corp" target="_blank" class="btn btn-danger">Jogue agora!</a>
           </div>
         </div>
