--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <img src="assets/thumbs/sd.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Sneaky's Dungeon</h5>
-            <p class="card-text">Um jogo de plataforna que homenageia clássicos da From Software. Jogue apenas usando o mouse!</p>
+            <p class="card-text">Um jogo de plataforma que homenageia clássicos da From Software. Jogue apenas usando o mouse!</p>
             <a href="https://alexhsantos.itch.io/sneakys-dungeeon" target="_blank" class="btn btn-danger">Jogue agora!</a>
           </div>
         </div>
